--- a/src/pages/Content/style.scss
+++ b/src/pages/Content/style.scss
@@ -3,3 +3,16 @@
 .content-view {
   font-size: 30px;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  cursor: pointer;
+}
