--- a/src/pages/Content/style.scss
+++ b/src/pages/Content/style.scss
@@ -1,18 +1,9 @@
-@import "@assets/style/theme.scss";
-
-.content-view {
-  font-size: 30px;
-}
-
 .overlay {
   position: fixed;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2;
-  cursor: pointer;
+  left: 0;
+  z-index: 2147483000;
+  background-color: rgba(0,0,0,0.8);
 }
